--- a/cadastro/templates/emprestimo.html
+++ b/cadastro/templates/emprestimo.html
@@ -20,11 +20,11 @@
         <p class="alert alert-success">Mensagem enviada com sucesso!</p>
         {% else %}
         <br>
-        <form action="." method="post" novalidate>
+        <form action="" method="post" novalidate>
             {% csrf_token %}
             {% bootstrap_form form %}
           <hr>
-            <button class="btn btn-primary" type="submit">Enviar Mensagem</button>
+            <button class="save btn btn-primary" type="submit">Enviar Mensagem</button>
         </form>
         {% endif %}
       </main>
