--- a/cadastro/templates/emprestimo.html
+++ b/cadastro/templates/emprestimo.html
@@ -7,28 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contato</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  </head>
-  <body style="background-color: rgb(255, 255, 255);">
+  </head>b
+  <body  style="background-image: linear-gradient(to right, black , rgb(8, 48, 74));">
     
       <main>
-        <h2 class="mt-3 mb-6" style="text-align: center;color: rgb(20, 90, 50);">Emprestimo</h2>
-        <p class="col-11 m-auto" style="color: rgb(20, 90, 50);">
-          Envie uma mensagem através do Formulário abaixo ou ligue para o telefone {{ telefone }}
-          e fale com o responsável {{ responsavel|upper }}.
-        </p>
-        {% if sucesso %}
-        <p class="alert alert-success">Mensagem enviada com sucesso!</p>
-        {% else %}
-        <br>
-        <form action="" method="post" novalidate>
-            {% csrf_token %}
-            {% bootstrap_form form %}
-          <hr>
-            <button class="save btn btn-primary" type="submit">Enviar Mensagem</button>
-        </form>
-        {% endif %}
-      </main>
-      <footer class="card m-auto border-top" style="text-align: end; background-color: rgb(255, 255, 255 ); padding-right: 10px; padding-top: 10px; padding-bottom: 15px; font-family: Arial, Helvetica, sans-serif; font-size: small; color: rgb(20, 90, 50);">
+        <div class="card w-75 mb-3 mt-5 m-auto" style="background: rgb(21, 39, 51);">
+          <div class="card-body m-auto" style="color: white;">
+            <h2 class="card-title">Registro de Empréstimo</h2>
+            <p class="card-text">Preencha o formulário abaixo.</p>
+            {% if sucesso %}
+            <p class="alert alert-success">Mensagem enviada com sucesso!</p>
+            {% else %}
+            <br>
+            <form action="" method="post" novalidate style="font-size: 15px;">
+                {% csrf_token %}
+                {% bootstrap_form form %}
+              <hr>
+                <button class="save btn btn-primary" type="submit">Enviar Mensagem</button>
+            </form>
+            {% endif %}
+          </div>
+        </div>
+      </main> 
+      <footer class="card m-auto border-top fixed-bottom" style="text-align: end; background-color:rgb(21, 39, 51); padding-right: 10px; padding-top: 10px; padding-bottom: 15px; font-family: Arial, Helvetica, sans-serif; font-size: small; color: rgb(255, 255, 255);">
         Criado por William Santos
       </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
