--- a/cadastro/templates/visualizar.html
+++ b/cadastro/templates/visualizar.html
@@ -8,14 +8,15 @@
     <title>Contato</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
-  <body>
-        <div class="container">
-            <h1 align="center">Lista de emprestimos</h1>
-            <div class="table-responsive">
-                <table class="table" align="center">
-                    <tr>
+  <body style="background-image: linear-gradient(to right, black , rgb(8, 48, 74));">
+    <div class="card w-75 mb-3 mt-5 m-auto" style="background: rgb(21,39,51);color: white;">
+        <h2 class="pt-4" style="text-align: center;">Lista de emprestimos</h2>
+        <div class="card-body m-auto" style="color: white;"></div>
+            <div class="table-responsive" style="color: white;">
+                <table class="table" style="color: white;">
+                    <tr style="text-align: center;color: white;">
                         <th>Cliente</th>
-                        <th>Livro</th>
+                        <th>Titulo/Autor</th>
                         <th>Data de Retirada</th>
                         <th>Previsão Entrega</th>
                         <th>Observação</th>
@@ -24,7 +25,7 @@
 
                     </tr>
                     {% for emprestimo in lista_emprestimos %} 
-                    <tr>
+                    <tr style="font-size: 14px;">
                         <td>{{ emprestimo.cliente }}</td>
                         <td>{{ emprestimo.livro }}</td>
                         <td>{{ emprestimo.data_retirada }}</td>
@@ -40,5 +41,6 @@
             </div>
 
         </div>
+    </div>
     </body>
 </html>
