estilizando as páginas cadastrar e visualizar.

--- a/cadastro/templates/editar.html
+++ b/cadastro/templates/editar.html
@@ -11,7 +11,7 @@
   <body style="background-color: rgb(255, 255, 255);">
     
       <main>
-        <h2 class="mt-3 mb-6" style="text-align: center;color: rgb(20, 90, 50);">Editar</h2>
+        <h2 class="mt-3 mb-6" style="text-align: center;color: rgb(20, 90, 50); font-family:'Times New Roman', Times, serif;">Editar</h2>
         <!-- <p class="col-11 m-auto" style="color: rgb(20, 90, 50);">
           Envie uma mensagem através do Formulário abaixo ou ligue para o telefone {{ telefone }}
           e fale com o responsável {{ responsavel|upper }}.
