--- a/cadastro/templates/emprestimo.html
+++ b/cadastro/templates/emprestimo.html
@@ -1,25 +1,18 @@
-{% load static %}
-<!DOCTYPE html>
+{% extends 'base.html'%}
+
 {% load bootstrap5 %}
-<html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contato</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  </head>b
-  <body  style="background-image: linear-gradient(to right, black , rgb(8, 48, 74));">
-    
+
+{% block conteudo %}
       <main>
-        <div class="card w-75 mb-3 mt-5 m-auto" style="background: rgb(21, 39, 51);">
+        <div class="card w-75 mb-3 mt-5 m-auto" style="background: rgb(33, 37, 41);">
           <div class="card-body m-auto" style="color: white;">
-            <h2 class="card-title" style="font-family:'Times New Roman', Times, serif;">Registro de Empréstimo</h2>
+            <h2 class="card-title fst-italic">Registro de Empréstimo</h2>
             <p class="card-text" style="font-family:'Times New Roman', Times, serif;">Preencha o formulário abaixo.</p>
             {% if sucesso %}
             <p class="alert alert-success">Mensagem enviada com sucesso!</p>
             {% else %}
             <br>
-            <form action="" method="post" novalidate style="font-size: 17px; font-family:'Times New Roman', Times, serif;">
+            <form action="" method="post" novalidate class="fst-italic">
                 {% csrf_token %}
                 {% bootstrap_form form %}
               <hr>
@@ -29,9 +22,4 @@
           </div>
         </div>
       </main> 
-      <footer class="card m-auto border-top fixed-bottom" style="text-align: end; background-color:rgb(21, 39, 51); padding-right: 10px; padding-top: 10px; padding-bottom: 15px; font-family: Arial, Helvetica, sans-serif; font-size: small; color: rgb(255, 255, 255);">
-        Criado por William Santos
-      </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-  </body>
-</html>
+{% endblock%}
