--- a/cadastro/templates/base.html
+++ b/cadastro/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -6,7 +7,7 @@
     <meta name="description" content="">
     <title>Sistema Biblioteca</title>
     <!-- Bootstrap core CSS -->
-    <link href="/static/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- Favicons -->>
     <meta name="theme-color" content="#7952b3">
@@ -29,7 +30,7 @@
     <!-- Custom styles for this template -->
     <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="/static/blog.css" rel="stylesheet">
+    <link href="/static/css/blog.css" rel="stylesheet">
   </head>
   <body>
     
@@ -37,7 +38,7 @@
   <header class="blog-header py-3">
     <div class="row flex-nowrap justify-content-between align-items-center">
      <div class="col-4 pt-1">
-        <a class="link-secondary" href="#">Empréstimo</a>
+        <a class="link-secondary" href="{% url 'emprestimo' %}">Empréstimo</a>
       </div>
       <div class="col-4 text-center">
         <a class="blog-header-logo text-dark" href="#">Biblioteca Camaçari</a>
@@ -53,8 +54,9 @@
 
   <div class="nav-scroller py-1 mb-2">
     <nav class="nav d-flex justify-content-between">
-      <a class="p-2 link-secondary" href="#">Empréstimo</a>
-      <a class="p-2 link-secondary" href="#">Visualizar</a>
+      <a class="p-2 link-secondary" href="{% url 'inicio' %}">Inicio</a>
+      <a class="p-2 link-secondary" href="{% url 'emprestimo' %}">Registrar Serviço</a>
+      <a class="p-2 link-secondary" href="{% url 'visualizar' %}">Visualizar</a>
       <!-- <a class="p-2 link-secondary" href="#">Deletar</a>
       <a class="p-2 link-secondary" href="#">Deletar</a> -->
     </nav>
@@ -69,6 +71,7 @@
   </div>
   <div class="row mb-2">
     {% block conteudo %}
+
     {% endblock %}
  
   </div>
