--- a/cadastro/templates/emprestimo.html
+++ b/cadastro/templates/emprestimo.html
@@ -3,23 +3,21 @@
 {% load bootstrap5 %}
 
 {% block conteudo %}
-      <main>
-        <div class="card w-75 mb-3 mt-5 m-auto" style="background: rgb(33, 37, 41);">
-          <div class="card-body m-auto" style="color: white;">
-            <h2 class="card-title fst-italic">Registro de Empréstimo</h2>
-            <p class="card-text" style="font-family:'Times New Roman', Times, serif;">Preencha o formulário abaixo.</p>
+          </div>
+        </div>
+        <div class="row m-2">
+          <div class="col-md-6">
             {% if sucesso %}
             <p class="alert alert-success">Mensagem enviada com sucesso!</p>
             {% else %}
-            <br>
             <form action="" method="post" novalidate class="fst-italic">
-                {% csrf_token %}
-                {% bootstrap_form form %}
+              {% csrf_token %}
+              {% bootstrap_form form %}
               <hr>
-                <button class="save btn btn-primary" type="submit" style="font-family:'Times New Roman', Times, serif;">Enviar Mensagem</button>
+              <button class="save btn btn-primary" type="submit" style="font-family:'Times New Roman', Times, serif;">Enviar Mensagem</button>
             </form>
             {% endif %}
-          </div>
+           </div>
         </div>
       </main> 
 {% endblock%}
