--- a/cadastro/templates/deletar.html
+++ b/cadastro/templates/deletar.html
@@ -1,15 +1,8 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
+{% load bootstrap5 %}
+{% block conteudo %}
 
-<html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contato</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  </head>
-  <body style="background-color: rgb(255, 255, 255);">
-    
     <main>
       <div class="container">
         <h2 class="mt-3 mb-6" style="text-align: center;color: rgb(20, 90, 50);">Deletar registro de emprestimo</h2>
@@ -21,15 +14,10 @@
         <div class="card">
             <form method="post" action="." onsubmit="return confirm('Tem certeza que deseja deletar registro?');">
                 {% csrf_token %}
+                {% bootstrap_form form %}
                 <button class="btn btn-danger" type="submit">Deletar</button>
             </form>
         </div>
     </div>
     </main>
-    <footer class="card m-auto border-top" style="text-align: end; background-color: rgb(255, 255, 255 ); padding-right: 10px; padding-top: 10px; padding-bottom: 15px; font-family: Arial, Helvetica, sans-serif; font-size: small; color: rgb(20, 90, 50);">
-      Criado por William Santos
-    </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-</body>
-</html>
-    
+  {% endblock %}
