--- a/cadastro/templates/deletar.html
+++ b/cadastro/templates/deletar.html
@@ -1,20 +1,19 @@
 {% extends 'base.html' %}
 {% load static %}
-{% load bootstrap5 %}
 {% block conteudo %}
 
     <main>
-      <div class="container">
-        <h2 class="mt-3 mb-6" style="text-align: center;color: rgb(20, 90, 50);">Deletar registro de emprestimo</h2>
-            <th>{{ emprestimo.cliente }}</th>
-            <th>{{ emprestimo.livro }}</th>
-            <p>{{ emprestimo.data_retirada }}</p>
-            <p>{{ emprestimo.data_entrega_prevista }}</p>
-            <p>{{ emprestimo.observacao }}</p>
+      <div class="container fst-italic">
+        <!-- <h2 class="mt-3 mb-6" style="text-align: center;color: rgb(20, 90, 50);">Deletar registro de emprestimo</h2> -->
+           
         <div class="card">
             <form method="post" action="." onsubmit="return confirm('Tem certeza que deseja deletar registro?');">
+              <p>{{ emprestimo.cliente }}</p>
+              <p>{{ emprestimo.livro }}<p>
+              <p>{{ emprestimo.data_retirada }}</p>
+              <p>{{ emprestimo.data_entrega_prevista }}</p>
+              <p>{{ emprestimo.observacao }}</p>
                 {% csrf_token %}
-                {% bootstrap_form form %}
                 <button class="btn btn-danger" type="submit">Deletar</button>
             </form>
         </div>
