--- a/cadastro/templates/base.html
+++ b/cadastro/templates/base.html
@@ -9,7 +9,6 @@
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <!-- Favicons -->>
     <meta name="theme-color" content="#7952b3">
     <style>
       .bd-placeholder-img {
@@ -37,26 +36,17 @@
 <div class="container">
   <header class="blog-header py-3">
     <div class="row flex-nowrap justify-content-between align-items-center">
-     <div class="col-4 pt-1">
-        <a class="link-secondary" href="{% url 'emprestimo' %}">Empréstimo</a>
-      </div>
       <div class="col-4 text-center">
-        <a class="blog-header-logo text-dark" href="#">Biblioteca Camaçari</a>
-      </div>
-      <div class="col-4 d-flex justify-content-end align-items-center">
-        <a class="link-secondary" href="#" aria-label="Search">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Pesquisar</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
-        </a>
-        <a class="btn btn-sm btn-outline-secondary" href="#">Entrar</a>
+        <h6 class="blog-header-logo text-dark fst-italic">Sistema Biblioteca</h6>
       </div>
     </div>
   </header>
 
   <div class="nav-scroller py-1 mb-2">
     <nav class="nav d-flex justify-content-between">
-      <a class="p-2 link-secondary" href="{% url 'inicio' %}">Inicio</a>
-      <a class="p-2 link-secondary" href="{% url 'emprestimo' %}">Registrar Serviço</a>
-      <a class="p-2 link-secondary" href="{% url 'visualizar' %}">Visualizar</a>
+      <a class="p-2 link-secondary fst-italic" href="{% url 'inicio' %}">Inicio</a>
+      <a class="p-2 link-secondary fst-italic" href="{% url 'emprestimo' %}">Registrar Serviço</a>
+      <a class="p-2 link-secondary fst-italic" href="{% url 'visualizar' %}">Visualizar</a>
       <!-- <a class="p-2 link-secondary" href="#">Deletar</a>
       <a class="p-2 link-secondary" href="#">Deletar</a> -->
     </nav>
@@ -66,7 +56,7 @@
 <main class="container">
   <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
     <div class="col-md-6 px-0">
-      <h1 class="display-4 fst-italic">Sistema de Biblioteca</h1>
+      <h1 class="display-4 fst-italic">Biblioteca Camaçari</h1>
     </div>
   </div>
   <div class="row mb-2">
