--- a/cadastro/templates/inicio.html
+++ b/cadastro/templates/inicio.html
@@ -11,7 +11,7 @@
             <h3 class="mb-0">{{ dado.titulo }}</h3>
             <div class="mb-1 text-muted">{{ dado.autor }}</div>
             <p class="card-text mb-auto">{{ dado.trecho }}</p>
-            <a href="#" class="stretched-link">Continue reading</a>
+            <a href="{% url 'emprestimo' %}" class="stretched-link">Escolher este livro</a>
         </div>
         
     </div>
