--- a/cadastro/templates/inicio.html
+++ b/cadastro/templates/inicio.html
@@ -2,6 +2,15 @@
 
 {% block conteudo %}
 
+<main class="container">
+    <div class="p-4 p-md-5 mb-2 text-dark border rounded" style="background: rgb(242, 243, 244)">
+      <div class="col-lg-12 text-center">
+        <h1 class="display-4 fst-italic" style="text-align: center; font-size: 25px;color: black;">O saber a gente aprende com os mestres e os livros. 
+            A sabedoria se aprende é com a vida e com os humildes.</h1>
+        <h6 style="text-align: end;">Cora Carolina</h6>
+      </div>
+    </div>
+    <div class="row mb-2">
 {% for dado in dados %}
 
 <div class="col-md-6">
