--- a/cadastro/templates/visualizar.html
+++ b/cadastro/templates/visualizar.html
@@ -3,6 +3,13 @@
 {% load bootstrap5 %}
 
 {% block conteudo %}
+<main class="container">
+    <div class="p-4 p-md-5 mb-4 text-white border rounded" style="background: rgb(242, 243, 244)">
+      <div class="col-lg-12 text-center">
+        <h1 class="display-4 fst-italic" style="text-align: center; color: black;">Lista de Empréstimo</h1>
+      </div>
+    </div>
+    <div class="row mb-2">
 <div class="table-responsive" >
     <table class="table fst-italic">
         <tr>
