Colocando bordas na página de visualização.

--- a/cadastro/templates/emprestimo.html
+++ b/cadastro/templates/emprestimo.html
@@ -5,9 +5,9 @@
 {% block conteudo %}
 
 <main class="container">
-  <div class="p-4 p-md-5 mb-4 text-white border rounded" style="background: rgb(242, 243, 244)">
+  <div class="px-3 py-3 mb-1 text-dark border rounded" style="background: rgb(242, 243, 244)">
     <div class="col-lg-12 text-center">
-      <h1 class="display-4 fst-italic" style="text-align: center;color: black;">Empréstimo</h1>
+      <h1 class="display-4 fst-italic" style="text-align: center;color: black;font-size: 40px;">Empréstimo</h1>
     </div>
   </div>
   <div class="row mb-2">
