--- a/cadastro/templates/inicio.html
+++ b/cadastro/templates/inicio.html
@@ -3,7 +3,7 @@
 {% block conteudo %}
 
 <main class="container">
-    <div class="p-4 p-md-5 mb-2 text-dark border rounded" style="background: rgb(242, 243, 244)">
+    <div class="px-3 py-3 mb-1 text-dark border rounded" style="background: rgb(242, 243, 244)">
       <div class="col-lg-12 text-center">
         <h1 class="display-4 fst-italic" style="text-align: center; font-size: 25px;color: black;">O saber a gente aprende com os mestres e os livros. 
             A sabedoria se aprende é com a vida e com os humildes.</h1>
