--- a/cadastro/templates/visualizar.html
+++ b/cadastro/templates/visualizar.html
@@ -4,14 +4,14 @@
 
 {% block conteudo %}
 <main class="container">
-    <div class="p-4 p-md-5 mb-4 text-white border rounded" style="background: rgb(242, 243, 244)">
+    <div class="px-3 py-3 mb-1 text-dark border rounded" style="background: rgb(242, 243, 244)">
       <div class="col-lg-12 text-center">
-        <h1 class="display-4 fst-italic" style="text-align: center; color: black;">Lista de Empréstimo</h1>
+        <h1 class="display-4 fst-italic" style="text-align: center; color: black; font-size: 40px;">Lista de Empréstimo</h1>
       </div>
     </div>
     <div class="row mb-2">
 <div class="table-responsive" >
-    <table class="table fst-italic">
+    <table class="table fst-italic" style="border: 2px;">
         <tr>
             <th>Cliente</th>
             <th>Titulo/Autor</th>
@@ -21,7 +21,7 @@
             <th>Deletar</th>
 
         </tr>
-        {% for emprestimo in lista_emprestimos %} 
+        {% for emprestimo in lista %} 
         <tr>
             <td>{{ emprestimo.cliente }}</td>
             <td>{{ emprestimo.livro }}</td>
@@ -36,6 +36,24 @@
         </tr>
         {% endfor %} 
     </table> 
+    <div class="paginator">
+      <span class="step-links">
+        {% if lista.has_previous %}
+          <a href="?page={{ lista.previous_page_number }}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-circle-fill" viewBox="0 0 16 16">
+            <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
+          </svg></a>
+        {% endif %}
+
+        <span class="current">
+          {{ lista.number }} de {{ lista.paginator.num_pages }}
+        </span>
+        {% if lista.has_next %}
+          <a href="?page={{ lista.next_page_number }}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+            <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
+          </svg></a>
+        {% endif %}
+      </span>
+    </div>
 </div>
 <script src="{% static 'js/javascript.js' %}"></script>
 {% endblock %}
